# noos-shuttle

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  noos-shuttle-v0-codex-handoff.md  package-lock.json  package.json  review-intake.config.example.json  vite.config.ts
.noos/: AGENT_COORDINATION.md  agent-registry.json  config.example.json  local.json.example  project.json
apps/noos-hub/src-tauri/: Cargo.toml  tauri.conf.json
apps/noos-hub/src-tauri/capabilities/: default.json
apps/noos-hub/src-tauri/icons/: icon.icns
apps/noos-hub/src-tauri/src/: main.rs
docs/: llm-wiki-sleep-resume-recovery.md  noos-context-pack-background-layer.md  noos-doc-forger.md  noos-downstream-integration.md  noos-handoff-vault-strategy.md  noos-hub-local-write-channel.md  noos-hub-power-profile.md  noos-hub-shuttle-user-guide.zh-CN.md  noos-hub-updater-signing.md  noos-hub-ux-refactor-design.md  noos-install-architecture.md  noos-llm-wiki-bridge.md  noos-shuttle-page-context-events.md  noos-shuttle-page-context-events.zh-CN.md  noos-shuttle-v0-design-breakdown.md  noos-shuttle-v0-refinement-notes.md  noos-shuttle-v0-work-plan.md  noos-system-definition-and-design-orientation.md  noos-thread-format.md  noos-vault-object-model.md  review-intake.md
public/: manifest.json
scripts/: install-noos-consumer.sh  llm-wiki-launch.sh  llm-wiki-post-wake-check-self-test.sh  llm-wiki-post-wake-check.sh  noos-doctor.sh  noos-find-artifact.sh  noos-find-crystal.sh  noos-hub-bundle.mjs  noos-hub-bundle.sh  noos-hub-launch.sh  noos-import-browser-vault.sh  noos-install.sh  (+31 more)
(+296 files in other folders)
