[package]
name = "noos-hub"
version = "0.1.2"
description = "NOOS Hub desktop control plane"
authors = ["NOOS Shuttle"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
