[package]
name = "noos-hub"
version = "0.1.6"
description = "NOOS Hub desktop control plane"
authors = ["FuTou 2026"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
